# kryon-compiler

./: .gitignore  CLAUDE.md  Cargo.toml  ROADMAP.md  debug_hex.rs  debug_krb.rs  debug_template_vars.rs  hello_world.kry  shell.nix  template_test.kry  test_absolute.kry  test_all_props.kry  test_hex.rs  test_input_types.kry  test_layout.rs  test_pos.kry  test_script.kry  test_template.kry  test_template_complete.kry
benches/: compilation_bench.rs
examples/02_basic_ui/: counter_simple.kry
src/: ast.rs  cli.rs  codegen.rs  component_resolver.rs  error.rs  lexer.rs  lib.rs  main.rs  module_context.rs  optimizer.rs  parser.rs  preprocessor.rs  script.rs  semantic.rs  size_calculator.rs  style_resolver.rs  types.rs  utils.rs  variable_context.rs
src/cli/: config.rs  handlers.rs  mod.rs
src/compiler/: mod.rs  optimizer.rs
src/compiler/backend/: codegen.rs  mod.rs  size_calculator.rs
src/compiler/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  semantic.rs
src/compiler/middle_end/: component_resolver.rs  mod.rs  module_context.rs  preprocessor.rs  script.rs  script_compiler.rs  style_resolver.rs  variable_context.rs
src/core/: constants.rs  mod.rs  properties.rs  state.rs  types.rs  util.rs
tests/: integration_tests.rs  integration_tests.rs.disabled  module_isolation_tests.rs  module_isolation_tests.rs.disabled
